clojure mandelbrot
we were able to create mandelbrot in clojure

think the colouring of the escape complex number is an interesting
puzzle

clojure code does not render to screen , just dumps P2 PGM file format
to screen in terms of
the image is this wide and this high and grayscale values range from 0
to 254 and
this is how it looks